--- a/index.html
+++ b/index.html
@@ -19,11 +19,20 @@ layout: default
         .chart-container {
             margin-bottom: 50px;
         }
+        #chart1 {
+            height: 500px;
+            width: 100%;
+        }
+        #chart2 {
+            height: 500px;
+            width: 100%;
+        }
+
     </style>
 </head>
 <body>
 
-    <!-- Visualization 1: Distribution of Building Status -->
+
     <div class="chart-container">
         <h2>relationship between cloud cover and average temperature across seasons.</h2>
         <p>
@@ -47,7 +56,7 @@ layout: default
         </script>
     </div>
 
-    <!-- Visualization 2: Distribution of the Number of Buildings by County -->
+    
     <div class="chart-container">
         <h2>relationship between Latitude and Wind Speed Distribution Across Seasons</h2>
         <p>
