--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ layout: default
         </p>
         <div id="chart1"></div>
         <script>
-            vegaEmbed('#chart1', '{{ "/assets/js/cloud_temp_chart.json" | relative_url }}')
-                .then(() => console.log("Chart 1 loaded"))
+            vegaEmbed('#latitude_wind_season_chart', '/assets/js/cloud_temp_chart.json')
+                .then(() => console.log('latitude_wind_season_chart loaded'))
                 .catch(console.error);
         </script>
     </div>
@@ -71,8 +71,8 @@ layout: default
 
         <div id="chart2"></div>
         <script>
-            vegaEmbed('#chart2', '{{ "/assets/js/latitude_wind_season_chart.json" | relative_url }}')
-                .then(() => console.log("Chart 2 loaded"))
+            vegaEmbed('#latitude_wind_season_chart', '/assets/js/latitude_wind_season_chart.json')
+                .then(() => console.log('latitude_wind_season_chart loaded'))
                 .catch(console.error);
         </script>
     </div>
