--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ layout: default
         </p>
         <div id="chart1"></div>
         <script>
-            vegaEmbed('#latitude_wind_season_chart', '/assets/js/cloud_temp_chart1.json')
+            vegaEmbed('#latitude_wind_season_chart', '/assets/js/building_status_distribution.json.json')
                 .then(() => console.log('latitude_wind_season_chart loaded'))
                 .catch(console.error);
         </script>
