--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ layout: default
 
         <div id="chart2"></div>
         <script>
-            vegaEmbed('#latitude_wind_season_chart', '/assets/js/latitude_wind_season_chart1.json')
+            vegaEmbed('#chart1', '/HW6/assets/js/cloud_temp_chart.json')
                 .then(() => console.log('latitude_wind_season_chart loaded'))
                 .catch(console.error);
         </script>
